[package]
name = "rpc-client"
version = "0.1.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"

[dependencies]
jsonrpc-core-client = { version = "14.2.0", default-features = false, features = ["http"] }
jsonrpc-core = "14.2.0"
futures = "0.3.5"
blocks = { package = "forest_blocks", path = "../../blockchain/blocks", features = ["json"] }
hyper = "0.12"
serde_json = "1.0"